--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           node-version: "12"
       - uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 0.13.04
+        # with:
+        #   terraform_version: 0.13.04
       - name: install cdk terraform
         run: npm install --global cdktf-cli@next
       - name: check
