--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: CDKTF
+name: cdktf
 on:
   push:
     branches: [main]
@@ -18,6 +18,5 @@ jobs:
       - name: install cdk terraform
         run: npm install --global cdktf-cli@next
       - name: check
-        run: |
+        run: 
           cdktf get
-          cdktf synth
