--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,4 +19,4 @@ jobs:
         run: npm install --global cdktf-cli@next
       - name: check
         run: 
-          ls
+          cdktf -version
