--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,10 +13,11 @@ jobs:
         with:
           node-version: "12"
       - uses: hashicorp/setup-terraform@v1
-        # with:
-        #   terraform_version: 0.13.04
+        with:
+          # terraform_version: 0.13.04
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
       - name: install cdk terraform
         run: npm install --global cdktf-cli@next
       - name: check
         run: 
-          cdktf -version
+          cdktf get
