--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           # terraform_version: 0.13.04
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: install cdk terraform
         run: npm install --global cdktf-cli
       - name: check
