--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,10 +19,17 @@ jobs:
         #   github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: install cdk terraform
         run: npm install --global cdktf-cli
-      - name: check
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}     
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: 
-          cdktf get
+      # - name: check
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}     
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: 
+      #     cdktf get
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
+
+      - name: Terraform Init
+        id: init
+        run: terraform init      
