--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -26,10 +26,5 @@ jobs:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #   run: 
       #     cdktf get
-      - name: Terraform Format
-        id: fmt
-        run: terraform fmt -check
-
-      - name: Terraform Init
-        id: init
-        run: terraform init      
+      - run:
+          command: cdktf get        
