--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,7 +32,8 @@
 #     #   env:
 #     #     GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
 #     #   run: "cd cdktf.out && rm -rf .terraform && terraform init && terraform apply -auto-approve"             
-version: 2.1
+orbs:
+  node: circleci/node@4.1.0
 name: cdktf
 on:
   push:
